# dolphin-bot

./: .dockerignore  .env.example  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-ci.yml  docker-image.yml  pylint.yml
src/: main.py
src/commands/: cognitive.py  dolphin.py  llm.py
src/utils/: chat.py  langchain.py
