[project]
authors = [{name = "pabl-o-ce", email = "cye@poscye.com"}]
name = "dolphin-bot"
version = "0.1.0"
description = "Cognitive Computations: Dolphin bot"
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord-py-interactions ==5.11.0",
    "python-dotenv ==1.0.1",
    "llama-cpp-python ==0.2.65",
    "langchain ==0.1.13",
    "langchain-community ==0.0.29",
    "langchain-core ==0.1.48",
    "redis ==5.0.4",
    "openai ==1.14.3",
    "langchain-openai ==0.1.5",
    "discord-py ==2.3.2",
]

[project.scripts]
start-bot = "main:main"

[project.optional-dependencies]
dev = [
    "pylint == 3.1.0"
]

[build-system]
requires = [
    "packaging",
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"
