[project]
authors = [{name = "pabl-o-ce", email = "cye@poscye.com"}]
name = "dolphin-bot"
version = "0.1.0"
description = "Cognitive Computations: Dolphin bot"
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord-py-interactions ==5.12.1",
    "python-dotenv ==1.0.1",
    "llama-cpp-python ==0.2.76",
    "llama-index ==0.10.40",
    "llama-index-llms-llama-cpp ==0.1.3",
    "llama-index-embeddings-huggingface ==0.2.2",
    "llama-index-storage-chat-store-redis ==0.1.3",
    "redis ==5.0.4",
    "discord-py ==2.3.2",
]

[project.scripts]
start-bot = "main:main"

[project.optional-dependencies]
dev = [
    "pylint ==3.2.3"
]

[build-system]
requires = [
    "packaging",
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"
